--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -370,6 +370,10 @@
     </div>
 
     <div class="after-life">
+      <div class="db-hero-inn-img">
+        <img src="{{ 'Explore-OC__asset-v30-574x958.png' | asset_url }}" alt="">
+      </div>
+
       <div class="db-container">
         <div class="db-row">
           <div class="db-col">
@@ -417,13 +421,17 @@
 
   <section class="db-section db-section--explore-oc-after-life-roadmap2">
     <div class="afterlife" id="afterlife" ref="afterlife">
+      <div class="db-hero-inn-img">
+        <img src="{{ 'Explore-OC__asset-v29-638x1068.png' | asset_url }}" alt="">
+      </div>
+
       <div class="db-container">
         <div class="db-row">
           <div class="db-col">
             THE AFTER, <span>AFTER LIFE</span>
           </div>
           <div class="db-col">
-            But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the undead world of 2069.
+            But wait, that’s not all! Immerse yourself in a full story world and all the insanity that rolls with a bunch of undead hooligans in the year 2069.
           </div>
         </div>
       </div>
