--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -723,7 +723,7 @@
 
             p {
               color: #CAC7D0;
-              font-family: $secondaryFontFamily;
+              font-family: sans-serif;
               font-size: 16px;
               font-style: normal;
               font-weight: 400;
