update copy content

--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -120,7 +120,7 @@
             So, you have a choice. Take us to bed or leave us forever.
             <br/>
             <br/>
-            Fuck, sorry. Wrong choice. This is your choice...
+            Wait, sorry. Wrong choice. This is your choice...
             <br/>
             <br/>
             Stay a zombie. Or become a deadbeat.
