--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -419,117 +419,79 @@
     </div>
   </section>
 
-  <section class="db-section db-section--explore-oc-after-life-roadmap2">
-    <div class="afterlife" id="afterlife" ref="afterlife">
-      <div class="db-hero-inn-img">
-        <img src="{{ 'Explore-OC__asset-v29-638x1068.png' | asset_url }}" alt="">
-      </div>
-
-      <div class="db-container">
-        <div class="db-row">
-          <div class="db-col">
-            THE AFTER, <span>AFTER LIFE</span>
-          </div>
-          <div class="db-col">
-            But wait, that’s not all! Immerse yourself in a full story world and all the insanity that rolls with a bunch of undead hooligans in the year 2069.
-          </div>
-        </div>
-      </div>
+  <section class="db-section db-section--after-life">
+    <div class="db-bg-container">
+      <video class="db-bg-video --ds-view"
+        src="https://cdn.shopify.com/videos/c/o/v/a4bd2205bb494a4c9b6f872b8e54ff2e.mp4"
+        allow="autoplay"
+        preload="auto"
+        control="false"
+        autoplay="true"
+        volume="0"
+        playsinline=""
+        muted=""
+        loop="">
+      </video>
+      <video class="db-bg-video --mb-view"
+        src="https://cdn.shopify.com/videos/c/o/v/6027948197134c898b46526ada523a06.mp4"
+        allow="autoplay"
+        preload="auto"
+        control="false"
+        autoplay="true"
+        volume="0"
+        playsinline=""
+        muted=""
+        loop="">
+      </video>
     </div>
+    <div class="db-container">
+      <h2>
+        THE AFTER, AFTER LIFE
+      </h2>
+      <p>
+        But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the world of the undead in 2069.
+      </p>
+    </div>
+  </section>
 
-    <div class="roadmap">
-      <div class="roadmap-bg-video-container">
-        <video class="db-bg-video --ds-view"
-          src="https://cdn.shopify.com/videos/c/o/v/77af5f37ef2a4afd9104d2a6f08e811c.mp4"
-          allow="autoplay"
-          preload="auto"
-          control="false"
-          autoplay="true"
-          volume="0"
-          playsinline=""
-          muted=""
-          loop="">
-        </video>
-        <video class="db-bg-video --mb-view"
-          src="https://cdn.shopify.com/videos/c/o/v/1c279c7d77d2420a8d2a0bdc8e73805e.mp4"
-          allow="autoplay"
-          preload="auto"
-          control="false"
-          autoplay="true"
-          volume="0"
-          playsinline=""
-          muted=""
-          loop="">
-        </video>
-      </div>
-
-      <div class="db-container">
-        <div class="db-row">
-          <div class="db-col">
+  <section class="db-section db-section--road-map">
+    <div class="db-bg-container">
+      <video class="db-bg-video --ds-view"
+        src="https://cdn.shopify.com/videos/c/o/v/77af5f37ef2a4afd9104d2a6f08e811c.mp4"
+        allow="autoplay"
+        preload="auto"
+        control="false"
+        autoplay="true"
+        volume="0"
+        playsinline=""
+        muted=""
+        loop="">
+      </video>
+      <video class="db-bg-video --mb-view"
+        src="https://cdn.shopify.com/videos/c/o/v/1c279c7d77d2420a8d2a0bdc8e73805e.mp4"
+        allow="autoplay"
+        preload="auto"
+        control="false"
+        autoplay="true"
+        volume="0"
+        playsinline=""
+        muted=""
+        loop="">
+      </video>
+    </div>
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+          <h2>
             IT’S A ROAD. MAP.
-          </div>
-          <div class="db-col">
+          </h2>
+          <p>
             Yep, that’s it, there’s where it all goes down. This is the world we’re building together with you.
-          </div>
+          </p>
         </div>
       </div>
     </div>
   </section>
-
-{% comment %} ------------------------------------------ {% endcomment %}
-  {% comment %} <section class="db-section db-section--explore-oc-after-life-roadmap">
-    <div class="afterlife">
-      <div class="db-container">
-        <div class="db-row">
-          <div class="db-col">
-            THE AFTER, AFTER LIFE
-          </div>
-          <div class="db-col">
-            But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the undead world of 2069.
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="roadmap">
-      <div class="roadmap-bg-video-container">
-        <video class="db-bg-video --ds-view"
-          src="https://cdn.shopify.com/videos/c/o/v/77af5f37ef2a4afd9104d2a6f08e811c.mp4"
-          allow="autoplay"
-          preload="auto"
-          control="false"
-          autoplay="true"
-          volume="0"
-          playsinline=""
-          muted=""
-          loop="">
-        </video>
-        <video class="db-bg-video --mb-view"
-          src="https://cdn.shopify.com/videos/c/o/v/1c279c7d77d2420a8d2a0bdc8e73805e.mp4"
-          allow="autoplay"
-          preload="auto"
-          control="false"
-          autoplay="true"
-          volume="0"
-          playsinline=""
-          muted=""
-          loop="">
-        </video>
-      </div>
-
-      <div class="db-container">
-        <div class="db-row">
-          <div class="db-col">
-            IT’S A ROAD. MAP.
-          </div>
-
-          <div class="db-col">
-            Yep, that’s it, there’s where it all goes down. This is the world we’re building together with you.
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> {% endcomment %}
 
   <section class="db-section db-section--explore-oc-coming-soon-2">
     <div class="db-container">
@@ -682,92 +644,8 @@
     </div>
   </section>
 
-
-  {% comment %}
-    <section class="db-section db-section--explore-oc-resurrection">
-      <div class="db-container">
-        <div class="db-row">
-          <div class="db-col" ref="undeadSlider">
-
-            <div class="box active-box">
-              <div class="button-container" ref="undeadButton" :class="activeControls">
-                <div class="button">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" viewBox="0 0 65 65" fill="none" class="db-svg" :class="activeSvg" @click="onChangeUndeadCardSlide">
-                  <rect x="0.773809" y="0.773809" width="63.4524" height="63.4524" rx="31.7262" stroke="#AA27B1" stroke-width="1.54762"/>
-                  <path d="M37.1426 33.138C37.1426 33.4475 36.9878 33.7571 36.8331 33.9118L31.7259 39.019C31.2616 39.4833 30.4878 39.4833 30.0235 39.019C29.5592 38.5547 29.5592 37.7809 30.0235 37.3166L34.2021 33.138L30.0235 28.9594C29.5592 28.4952 29.5592 27.7214 30.0235 27.2571C30.4878 26.7928 31.2616 26.7928 31.7259 27.2571L36.6783 32.2094C36.9878 32.519 37.1426 32.8285 37.1426 33.138Z" fill="#AA27B1"/>
-                  </svg>
-                </div>
-              </div>
-
-              <div class="box-wrapper" @click="onChangeClickCardSlide($event)"></div>
-            </div>
-
-            <div class="box nonactive-box">
-              <div class="box-wrapper" @click="onChangeClickCardSlide"></div>
-            </div>
-          </div>
-
-          <div class="db-col">
-            <h3>
-              It’s YOUR Undead!
-            </h3>
-            <div class="db-resurrection-description">
-              Deadbeats are wavy, expressive, and maybe a little bit vain and they love to show it off. It’s your Deadbeat and they’re completely customizable - BY YOU! Not to mention all of it will be earnable for free by participating in our games, concerts, and more!
-              <br />
-              <br />
-              You’ll also gain access to our exclusive music creation and background customization tools. Give your Deadbeat a theme song and write their story EXACTLY the way YOU want!
-            </div>
-
-            <div class="undeadSlider" ref="undeadSliderMb">
-              <div class="box active-box">
-                <div class="button-container" ref="undeadButtonMb" :class="activeControls">
-                  <div class="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" viewBox="0 0 65 65" fill="none" class="db-svg" :class="activeSvg" @click="onChangeUndeadCardSlideMb">
-                    <rect x="0.773809" y="0.773809" width="63.4524" height="63.4524" rx="31.7262" stroke="#AA27B1" stroke-width="1.54762"/>
-                    <path d="M37.1426 33.138C37.1426 33.4475 36.9878 33.7571 36.8331 33.9118L31.7259 39.019C31.2616 39.4833 30.4878 39.4833 30.0235 39.019C29.5592 38.5547 29.5592 37.7809 30.0235 37.3166L34.2021 33.138L30.0235 28.9594C29.5592 28.4952 29.5592 27.7214 30.0235 27.2571C30.4878 26.7928 31.2616 26.7928 31.7259 27.2571L36.6783 32.2094C36.9878 32.519 37.1426 32.8285 37.1426 33.138Z" fill="#AA27B1"/>
-                    </svg>
-                  </div>
-                </div>
-
-                <div class="box-wrapper" @click="onChangeClickCardSlideMb($event)"></div>
-              </div>
-
-              <div class="box nonactive-box" @click="onChangeClickCardSlideMb($event)">
-                <div class="box-wrapper"></div>
-              </div>
-            </div>
-
-            <div class="db-resurrection-cta">
-              <button class="db-btn">
-                BUY NOW
-              </button>
-              <a href="">
-                <span>
-                  VIEW COLLECTIONS
-                </span>
-                <svg class="db-svg"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="160"
-                  height="2"
-                  viewBox="0 0 160 2"
-                  fill="none">
-                  <path id="path_01"
-                    d="M1 1H159.5"
-                    stroke="white"
-                    stroke-linecap="round">
-                  </path>
-                </svg>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  {% endcomment %}
-
 </div>
 <script>
-
   const DB_SF_Page_Explore_OC_Options = {
     name: 'DB SF Page Explore OC Options',
     data() {
@@ -924,6 +802,59 @@
         footer.style.backgroundColor = '#0E0914';
       }, 3000)
     },
+    mounted() {
+      const explore_oc_the_game = document.querySelector('#the-game');
+      // const dbItemHoverIndicator = this.$refs.indicator;
+
+      const compete = this.$refs.compete;
+      const characterCreation = this.$refs.characterCreation;
+      const breakthrough = this.$refs.breakthrough;
+      const community = this.$refs.community;
+
+      console.log(explore_oc_the_game);
+
+      const revealSection = (entries, observer) => {
+        const [entry] = entries;
+        console.log(entry.isIntersecting);
+        if (!entry.isIntersecting) {
+          return;
+        } else {
+          setTimeout(() => {
+            compete.classList.add('active')
+          }, 1000);
+
+          setTimeout(() => {
+            compete.classList.remove(['active']);
+            characterCreation.classList.add('active')
+          }, 2000);
+
+          setTimeout(() => {
+            characterCreation.classList.remove(['active'])
+            breakthrough.classList.add('active')
+          }, 3000);
+
+          setTimeout(() => {
+            breakthrough.classList.remove(['active'])
+            community.classList.add('active')
+          }, 4000);
+
+          setTimeout(() => {
+            community.classList.remove(['active']);
+          }, 5000);
+
+          observer.unobserve(entry.target);
+        }
+      }
+
+      const explore_oc_the_game_options = {
+        root: null,
+        threshold: 0.70,
+      }
+
+      const explore_oc_the_game_observer = new IntersectionObserver(revealSection, explore_oc_the_game_options);
+
+      explore_oc_the_game_observer.observe(explore_oc_the_game);
+    },
     computed: {
       activeControls() {
         if (!this.isActiveBox) {
@@ -997,59 +928,6 @@
           'active': false
         }
       },
-    },
-    mounted() {
-      const explore_oc_the_game = document.querySelector('#the-game');
-      // const dbItemHoverIndicator = this.$refs.indicator;
-
-      const compete = this.$refs.compete;
-      const characterCreation = this.$refs.characterCreation;
-      const breakthrough = this.$refs.breakthrough;
-      const community = this.$refs.community;
-
-      console.log(explore_oc_the_game);
-
-      const revealSection = (entries, observer) => {
-        const [entry] = entries;
-        console.log(entry.isIntersecting);
-        if (!entry.isIntersecting) {
-          return;
-        } else {
-          setTimeout(() => {
-            compete.classList.add('active')
-          }, 1000);
-
-          setTimeout(() => {
-            compete.classList.remove(['active']);
-            characterCreation.classList.add('active')
-          }, 2000);
-
-          setTimeout(() => {
-            characterCreation.classList.remove(['active'])
-            breakthrough.classList.add('active')
-          }, 3000);
-
-          setTimeout(() => {
-            breakthrough.classList.remove(['active'])
-            community.classList.add('active')
-          }, 4000);
-
-          setTimeout(() => {
-            community.classList.remove(['active']);
-          }, 5000);
-
-          observer.unobserve(entry.target);
-        }
-      }
-
-      const explore_oc_the_game_options = {
-        root: null,
-        threshold: 0.70,
-      }
-
-      const explore_oc_the_game_observer = new IntersectionObserver(revealSection, explore_oc_the_game_options);
-
-      explore_oc_the_game_observer.observe(explore_oc_the_game);
     },
     methods: {
       onLoadAnimation() {
