--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -3187,6 +3187,208 @@
     }
   }
 
+  .db-section--after-life {
+    position: relative;
+    height: 100vh;
+    padding: 0;
+
+    .db-bg-container {
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+      display: block;
+      height: 100%;
+
+      .db-bg-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        display: block;
+        object-position: center;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+
+        &.--ds-view {
+          display: block;
+
+          @media only screen and (max-width: 768px) {
+            display: none;
+          }
+        }
+
+        &.--mb-view {
+          display: none;
+
+          @media only screen and (max-width: 768px) {
+            display: block;
+          }
+        }
+      }
+    }
+
+    .db-container {
+      position: relative;
+      z-index: 2;
+      max-width: 820px;
+      padding: 60px 20px;
+
+      @media only screen and (max-width: 768px) {
+        padding: 50px 20px;
+      }
+
+      h2 {
+        color: $whiteColor;
+        font-family: $primaryFontFamily;
+        font-size: 88px;
+        font-style: normal;
+        font-weight: 700;
+        text-align: center;
+        line-height: 1.25em;
+        letter-spacing: -3.52px;
+        margin: 0 auto 32px;
+
+        @media only screen and (max-width: 768px) {
+          font-size: 50px;
+        }
+      }
+
+      p {
+        color: $whiteColor;
+        font-family: $primaryFontFamily;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        text-align: center;
+        line-height: 1.5em;
+
+        @media only screen and (max-width: 768px) {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
+  .db-section--road-map {
+    position: relative;
+    height: 100vh;
+    padding: 0;
+
+    .db-bg-container {
+      position: absolute;
+      z-index: 1;
+      inset: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      .db-bg-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        display: block;
+        object-position: center;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+
+        &.--ds-view {
+          display: block;
+
+          @media only screen and (max-width: 768px) {
+            display: none;
+          }
+        }
+
+        &.--mb-view {
+          display: none;
+
+          @media only screen and (max-width: 768px) {
+            display: block;
+          }
+        }
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        right: 0;
+        display: block;
+        background: linear-gradient(180deg, #0F0918 0%, rgba(15, 9, 23, 0.00) 100%);
+        height: 287px;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        z-index: 2;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 228px;
+        display: block;
+        background: linear-gradient(0deg, #100A16 0%, rgba(16, 10, 22, 0.00) 100%);
+        
+      }
+    }
+
+    .db-container {
+      position: relative;
+      z-index: 2;
+      height: 100%;
+      padding: 75px 20px;
+
+      .db-row {
+        justify-content: flex-start;
+        align-items: flex-end;
+        height: 100%;
+
+        .db-col {
+          width: 100%;
+
+          h2 {
+            color: $whiteColor;
+            font-family: $primaryFontFamily;
+            font-size: 48px;
+            font-style: normal;
+            font-weight: 600;
+            text-shadow: 1.7687277793884277px 1.7687277793884277px 13.265459060668945px rgba(0, 0, 0, 0.15);
+            line-height: 1.1em;
+            letter-spacing: -1.92px;
+            margin: 0 0 8px;
+
+            @media only screen and (max-width: 768px) {
+              font-size: 35px;
+            }
+          }
+
+          p {
+            color: $whiteColor;
+            font-family: $primaryFontFamily;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 500;
+            text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+            line-height: 1.5em;
+
+            @media only screen and (max-width: 768px) {
+              font-size: 18px;
+            }
+          }
+        }
+      }
+    }
+  }
+
   .db-section--explore-oc-after-life-roadmap {
     position: relative;
     height: 2276px;
@@ -3377,359 +3579,6 @@
 
               &:nth-child(2) {
                 color: $whiteColor;
-                text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
-                font-family: $primaryFontFamily;
-                font-size: 24px;
-                font-style: normal;
-                font-weight: 500;
-                line-height: 150%;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-
-  .db-section--explore-oc-after-life-roadmap2 {
-    position: relative;
-    height: 2197px;
-    padding-left: unset;
-    padding-right: unset;
-    padding-top: unset;
-
-    @media only screen and (max-width: 1080px) {
-      height: 1875px;
-    }
-
-    @media only screen and (max-width: 480px) {
-      display: none;
-    }
-
-    .afterlife {
-      height: 1065px;
-      position: relative;
-      padding-top: 121px;
-      padding-left: 20px;
-      background: url('Explore-OC__asset-v23-12000x3394.jpg');
-      background-repeat: no-repeat;
-      // background-position: bottom;
-      background-position: center;
-      background-size:cover;
-      // background-size: auto 100%;
-      background-attachment: fixed;
-      margin: -10px 0;
-      @media only screen and (max-width: 1080px) {
-        background: url('Explore-OC__asset-v25-1976x1486.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size:cover;
-        height: 743px;
-        padding-top: 65px;  
-      }
-
-      @media only screen and (max-width: 768px) {
-        padding-left: 20px;
-        padding-right: 20px;
-        background-position: left;
-      }
-
-      .db-hero-inn-img {
-        position: absolute;
-        display: none;
-        left: 50%;
-        bottom:0;
-        max-width: 319px;
-        width: 100%;
-        height: 534px;
-
-        @media only screen and (max-width: 1080px) {
-          display: block;
-        }
-
-        img {
-          object-fit: cover;
-          display: block;
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      &::before {
-        content: "";
-        position: absolute;
-        display: block;
-        bottom: 0;
-        left:0;
-        right: 0;
-        height: 1148px;
-        background: url('Explore-OC__asset-v24-12000x3446.png');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        z-index: 2;
-
-        @media only screen and (max-width: 1080px) {
-          // display: none;
-          background: none;
-          top:0;
-          bottom:unset;
-          height: 243px;
-          background: linear-gradient(180deg, #070510 0%, rgba(7, 5, 16, 0.82) 32.1%, rgba(7, 5, 16, 0.66) 56.33%, rgba(7, 5, 16, 0.00) 100%);
-        }
-      }
-
-      &::after {
-        @media only screen and (max-width: 1080px) {
-          content: "";
-          position: absolute;
-          display: block;
-          bottom: 0;
-          left:0;
-          right: 0;
-          height: 202px;
-          z-index: 2;
-          background: url('Explore-OC__asset-v26-1976x406.png');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size:cover;
-
-        }
-      }
-
-      // &::before {
-      //   content: "";
-      //   position: absolute;
-      //   display: block;
-      //   max-width: 691px;
-      //   width: 100%;
-      //   height: 1148px;
-      //   bottom:0;
-      //   background: url('sample3.png');
-      //   background-repeat: no-repeat;
-      //   background-position: center;
-      //   background-size: cover;
-      //   z-index: 2;
-      //   left: 50%;
-      //   transform: translateX(-20%);
-      // }
-
-      // &::before {
-      //   content: "";
-      //   position: absolute;
-      //   display: block;
-      //   top: 0;
-      //   right: 0;
-      //   left: 0;
-      //   height: 1065px;
-      //   // background: url('Explore-OC__asset-v21-3800x2130.png');
-      //   background: url('sample1.jpg');
-      //   background-repeat: no-repeat;
-      //   background-position: center;
-      //   background-size:cover;
-      //   background-attachment: fixed;
-      //   z-index: -1;
-
-      //   // @media only screen and (max-width: 1440px) {
-      //   //   background-position: left;
-      //   // }
-      // }
-
-      .db-container {
-        position: relative;
-        z-index: 3;
-        .db-row {
-          &:nth-child(1) {
-            flex-direction: column;
-            row-gap: 475px;
-            align-items: flex-start;
-            @media only screen and (max-width: 1080px) {
-              row-gap: 24px;
-              align-items: center;
-            }
-
-            .db-col {
-
-              &:nth-child(1) {            
-                color: #FFF;
-                text-align: left;
-                font-family: $primaryFontFamily;
-                font-size: 96px;
-                font-style: normal;
-                font-weight: 700;
-                line-height: 100%;
-                @media only screen and (max-width: 1080px) {
-                  font-size: 39px;
-                  text-align: center;
-                }
-                span {
-                  color: #FFF;
-                  font-family: $primaryFontFamily;
-                  font-size: 48px;
-                  font-style: normal;
-                  font-weight: 700;
-                  line-height: 100%;
-                  @media only screen and (max-width: 1080px) {
-                    font-size: 39px;
-                  }
-                }
-
-
-                // @media only screen and (max-width: 768px) {
-                //   font-size: 50px;
-                // }
-              }
-
-              &:nth-child(2) {
-                // color: #FFF;
-                // text-align: center;
-                // font-family: $primaryFontFamily;
-                // font-size: 32px;
-                // font-style: normal;
-                // font-weight: 500;
-                // line-height: 150%;
-                // max-width: 773px;
-                // width: 100%;
-                // min-width: 773px;
-
-                color: #FFF;
-                text-align: left;
-                font-family: $primaryFontFamily;
-                font-size: 32px;
-                font-style: normal;
-                font-weight: 500;
-                line-height: 150%;
-                max-width: 578px;
-                width: 100%;
-                min-width: 578px;
-
-                @media only screen and (max-width: 1080px) {
-                  font-size: 15px;
-                  max-width: 396px;
-                  min-width: 396px;
-                  text-align: center;
-                }
-
-                // @media only screen and (max-width: 768px) {
-                //   font-size: 25px;
-                //   max-width: 550px;
-                //   min-width: unset;
-                // }
-              }
-            }
-          }
-        }
-      }
-    }
-
-    .roadmap {
-      // background-color: #0E0914;
-      background-color: #0F0918;
-      height: 1132px;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      padding-left: 20px;
-      padding-right: 20px;
-      padding-bottom: 77px;
-
-      @media only screen and (max-width: 768px) {
-        justify-content: center;
-      }
-
-      .roadmap-bg-video-container {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        display: block;
-        width: 100%;
-        height: 1070px;
-
-        .db-bg-video {
-          position: absolute;
-          top: 0;
-          left: 0;
-          bottom: 0;
-          right: 0;
-          z-index: 1;
-          display: block;
-          object-position: center;
-          object-fit: cover;
-          width: 100%;
-          height: 100%;
-
-          &.--ds-view {
-            display: block;
-
-            @media only screen and (max-width: 768px) {
-              display: none;
-            }
-          }
-
-          &.--mb-view {
-            display: none;
-
-            @media only screen and (max-width: 768px) {
-              display: block;
-            }
-          }
-        }
-
-        &::before {
-          content: "";
-          position: absolute;
-          display: block;
-          top:0;
-          left:0;
-          right:0;
-          background: linear-gradient(180deg, #0F0918 0%, rgba(15, 9, 23, 0.00) 100%);
-          z-index: 2;
-          height: 287px;
-        }
-
-        &::after {
-          content: "";
-          position: absolute;
-          display: block;
-          bottom: 0;
-          left:0;
-          right:0;
-          height: 228px;
-          background: linear-gradient(0deg, #100A16 0%, rgba(16, 10, 22, 0.00) 100%);
-          z-index: 2;
-          
-        }
-      }
-
-      .db-container {
-        z-index: 3;
-        .db-row {
-          &:nth-child(1) {
-            flex-direction: column;
-            row-gap: 8px;
-
-            @media only screen and (max-width: 768px) {
-              max-width: 500px;
-              width: 100%;
-            }
-            
-            .db-col {
-              &:nth-child(1) {
-                color: #FFF;
-                text-shadow: 1.7687277793884277px 1.7687277793884277px 13.265459060668945px rgba(0, 0, 0, 0.15);
-                font-family: $primaryFontFamily;
-                font-size: 48px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: 100%; /* 48px */
-                letter-spacing: -1.92px;
-              }
-
-              &:nth-child(2) {
-                color: #FFF;
                 text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
                 font-family: $primaryFontFamily;
                 font-size: 24px;
