updated after life subtitle copy content;

--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -449,7 +449,7 @@
         THE AFTER, AFTER LIFE
       </h2>
       <p>
-        But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the world of the undead in 2069.
+        But wait, that’s not all! Immerse yourself in a full story world and all the insanity that rolls with a bunch of undead hooligans in the year 2069.
       </p>
     </div>
   </section>
