--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7110,7 +7110,6 @@ ul, ol {
 .db-page--explore-oc .db-section--after-life .db-container {
   position: relative;
   z-index: 2;
-  max-width: 820px;
   padding: 60px 20px;
 }
 @media only screen and (max-width: 768px) {
@@ -7125,8 +7124,8 @@ ul, ol {
   font-style: normal;
   font-weight: 700;
   text-align: center;
-  line-height: 1.25em;
-  letter-spacing: -3.52px;
+  line-height: 1.2em;
+  letter-spacing: -0.52px;
   margin: 0 auto 32px;
 }
 @media only screen and (max-width: 768px) {
@@ -7142,6 +7141,9 @@ ul, ol {
   font-weight: 500;
   text-align: center;
   line-height: 1.5em;
+  max-width: 820px;
+  width: 100%;
+  margin: 0 auto;
 }
 @media only screen and (max-width: 768px) {
   .db-page--explore-oc .db-section--after-life .db-container p {
