--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -3233,7 +3233,6 @@
     .db-container {
       position: relative;
       z-index: 2;
-      max-width: 820px;
       padding: 60px 20px;
 
       @media only screen and (max-width: 768px) {
@@ -3247,8 +3246,8 @@
         font-style: normal;
         font-weight: 700;
         text-align: center;
-        line-height: 1.25em;
-        letter-spacing: -3.52px;
+        line-height: 1.2em;
+        letter-spacing: -0.52px;
         margin: 0 auto 32px;
 
         @media only screen and (max-width: 768px) {
@@ -3264,6 +3263,9 @@
         font-weight: 500;
         text-align: center;
         line-height: 1.5em;
+        max-width: 820px;
+        width: 100%;
+        margin: 0 auto;
 
         @media only screen and (max-width: 768px) {
           font-size: 18px;
