update links and asset

--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -129,7 +129,7 @@
           <div class="db-inner-row">
             <a class="db-menu-link"
               title="Privacy Policy"
-              href="https://deadbeat2069.myshopify.com/pages/privacy-policy"
+              href="{{ shop.url }}/pages/privacy-policy"
               target="_blank">
               Privacy Policy
             </a>
@@ -148,7 +148,7 @@
             </svg>
             <a class="db-menu-link"
               title="Terms of Use"
-              href="https://deadbeat2069.myshopify.com/pages/terms-of-use"
+              href="{{ shop.url }}/pages/terms-of-use"
               target="_blank">
               Terms of Use
             </a>
