--- a/snippets/widget--columbus.liquid
+++ b/snippets/widget--columbus.liquid
@@ -1,4 +1,4 @@
-<a href="https://deadbeat2069.myshopify.com/pages/explore-oc" class="db-widget-item --columbus" title="">
+<a href="{{ shop.url }}/pages/explore-oc" class="db-widget-item --columbus" title="">
   <div class="db-widget-box">
     <div class="db-columbus">
       <svg class="db-svg" xmlns="http://www.w3.org/2000/svg" width="313" height="145" viewBox="0 0 313 145" fill="none">
